# reel

./: .gitignore  OVERVIEW.md  PUBLISHING.md  README.md  ROADMAP.md  config.example.toml  config.toml  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish.yml
reel/: __init__.py  __main__.py  ask.py  autostart.py  branding.py  config.py  console.py  device.py  formats.py  locate.py  mirror.py  naming.py  notify.py  organize.py  profiles.py  runner.py  search.py  transcribe.py  upgrade.py  watch.py
reel_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
